--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --rootDir src --outDir dist",
-    "postinstall": "typings install"
+    "build": "webpack --progress",
+    "build:prod": "webpack -p --progress",
+    "postinstall": "typings install",
+    "serve": "webpack-dev-server --inline --progress"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,11 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^2.17.0",
+    "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
-    "typings": "^1.4.0"
+    "typings": "^1.4.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
